<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorAccent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/ingredients"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="6sp"
            android:paddingStart="6sp"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipe_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/gray_background"
        android:padding="4dp" />

</LinearLayout>